kubernetes/system/argocd-private-access/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: private
  namespace: argocd
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: 192.168.1.220
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: argocd.homelab.ts.net
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  parentRefs:
    - name: private
      sectionName: http
  hostnames:
    - argocd.homelab.ts.net
  rules:
    - backendRefs:
        - name: argocd-server
          port: 80
